--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Hello World !!
+subtitle: This is where I will tell my friends about my me. It's going to be fun.
 use-site-title: true
 ---
 
