--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hello World !!
-subtitle: This is where I will tell my friends about my me. It's going to be fun.
+subtitle: My Timeline 
 use-site-title: true
 ---
 
